Fix hover height in horizontal scrollbars

--- a/app/assets/stylesheets/editor-3/_dropdown.scss
+++ b/app/assets/stylesheets/editor-3/_dropdown.scss
@@ -113,6 +113,7 @@
   padding: $baseSize * 2;
 }
 .Editor-boxModalContent .ps-scrollbar-x-rail {
+  height: 8px !important; // Resets standard scroll bar height
   z-index: 101;
 }
 .Editor-boxModalContent .ps-scrollbar-x-rail .ps-scrollbar-x {
