--- a/app/assets/stylesheets/editor-3/_editor.scss
+++ b/app/assets/stylesheets/editor-3/_editor.scss
@@ -69,6 +69,7 @@
   z-index: 3;
 }
 .Editor-panel .ps-scrollbar-x-rail {
+  height: 8px !important; // Resets standard scroll bar height
   z-index: 3;
 }
 .Editor-panel .ps-scrollbar-x-rail .ps-scrollbar-x {
